<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="start_game">Start</string>
    <string name="reset">New Game</string>

    <!--    for menus-->
    <string name="menu">Menu</string>
    <string name="select_first_player">Select Player 1</string>
    <string name="select_second_player">Select Player 2</string>
    <string name="add_player">Add a Player</string>
    <string name="scores">Scores</string>
    <string name="play">Play</string>

    <!--    for scores-->
    <string name="player_name">Name</string>
    <string name="player_wins">Wins</string>
    <string name="player_loses">Loses</string>
    <string name="player_ties">Ties</string>

    <!--    for add a player-->
    <string name="add">Add</string>
</resources>