<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_select_player"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/select_player" />

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_player"
        android:onClick="onAddPlayerClick"/>

    <Button
        android:id="@+id/button_scores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:onClick="onScoreClick"/>

    <Button
        android:id="@+id/button_play_game"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="onPlayClick"
        android:text="@string/play" />

    <Button
        android:id="@+id/button_what"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="temp" />

</LinearLayout>