<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFAC83"
        android:padding="7dp"
        android:text="@string/scores"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onAddMoreClick"
            android:text="Add more" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onGoToMenuClick"
            android:text="Go to menu" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/idTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:text="id"
            android:textSize="24sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/nameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="40"
            android:text="@string/player_name"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/winsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="20"
            android:text="@string/player_wins"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lossesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="20"
            android:text="@string/player_loses"

            android:textSize="24sp" />

        <TextView
            android:id="@+id/tiesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="20"
            android:text="@string/player_ties"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_view_player_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>